--- a/gb/23/6/28/n14024148.md
+++ b/gb/23/6/28/n14024148.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>美国经济数据利好 科技股领涨 美股反弹</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/02/GettyImages-1125098388-600x400.jpg" />
 <h6>当地时间周二（6月27日），美国股市在利好经济数据的刺激下，美股结束跌势，收盘走高。(JOHANNES EISELE/AFP/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2023年06月28日讯】（大纪元记者李洋综合报导）当地时间周二（6月27日），美国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%82%A1%E5%B8%82.md#1">股市</a>在利好经济数据的刺激下，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BE%8E%E8%82%A1.md#1">美股</a>结束跌势，收盘走高。当日新公布的美国5月份耐用品数据意外增长、6月份消费者信心指数好于预期，而新屋销售也超出预期，降低了市场对<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E7%BB%8F%E6%B5%8E.md#1">美国经济</a>衰退的忧虑。</p>
-<p>投资者对<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E7%BB%8F%E6%B5%8E.md#1">美国经济</a>数据优于预期感到乐观，尽管人们担心经济衰退可能即将到来，但这些数据带来的正面信息显示美国经济仍具韧性。</p>
-<h2><strong><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BE%8E%E8%82%A1.md#1">美股</a>三大指数集体反弹</strong></h2>
+	<p>【大纪元2023年06月28日讯】（大纪元记者李洋综合报导）当地时间周二（6月27日），美国股市在利好经济数据的刺激下，美股结束跌势，收盘走高。当日新公布的美国5月份耐用品数据意外增长、6月份消费者信心指数好于预期，而新屋销售也超出预期，降低了市场对美国经济衰退的忧虑。</p>
+<p>投资者对美国经济数据优于预期感到乐观，尽管人们担心经济衰退可能即将到来，但这些数据带来的正面信息显示美国经济仍具韧性。</p>
+<h2><strong>美股三大指数集体反弹</strong></h2>
 <p>截至当天收盘，道琼工业平均指数上扬212.03点，涨幅为0.63%，收报33926.74点；标准普尔500指数上涨49.59点或1.15%，收报4378.41点；纳斯达克综合指数大涨219.89点，涨幅为1.65%，收报13555.67点。费城半导体指数劲扬126.64点或3.60%，收报3642.41点。</p>
-<p>大型<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A7%91%E6%8A%80%E8%82%A1.md#1">科技股</a>集体上涨，反弹近4%，结束两个交易日的跌势，提振了以科技股为主的纳斯达克指数。Meta上涨3%，微软上涨1.82%，亚马逊升1.45%，苹果也上涨1.5%。</p>
-<p>欧洲<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%82%A1%E5%B8%82.md#1">股市</a>亦小涨作收。英国FTSE 100指数小涨7.88点或0.11%，收报7461.46点；德国DAX指数小涨33.80点或0.21%，收报15846.86点；法国CAC 40指数上涨31.23点或0.43%，收报7215.58点。</p>
+<p>大型科技股集体上涨，反弹近4%，结束两个交易日的跌势，提振了以科技股为主的纳斯达克指数。Meta上涨3%，微软上涨1.82%，亚马逊升1.45%，苹果也上涨1.5%。</p>
+<p>欧洲股市亦小涨作收。英国FTSE 100指数小涨7.88点或0.11%，收报7461.46点；德国DAX指数小涨33.80点或0.21%，收报15846.86点；法国CAC 40指数上涨31.23点或0.43%，收报7215.58点。</p>
 <p>东京股市也大幅收高。日股日经225指数收涨655.66点或2.02%，收报33193.99点；东证股价指数收涨44.79点或1.99%，收报2298.60点。</p>
-<p>本周五标志着2023年第二季度和上半年的结束。自4月初以来，纳斯达克指数已上涨10.9%，今年以来已上涨29.5%。随着投资者在2022年的市场低迷之后纷纷买入<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A7%91%E6%8A%80%E8%82%A1.md#1">科技股</a>，该股有望在上半年创下40年来最好的表现。标普500指数和道指有望在本季度结束时分别上涨6.6%和约2%。</p>
+<p>本周五标志着2023年第二季度和上半年的结束。自4月初以来，纳斯达克指数已上涨10.9%，今年以来已上涨29.5%。随着投资者在2022年的市场低迷之后纷纷买入科技股，该股有望在上半年创下40年来最好的表现。标普500指数和道指有望在本季度结束时分别上涨6.6%和约2%。</p>
 <p>6月份，标准普尔500指数和纳斯达克指数有望收涨近5%，而道指则有望实现3.1%的月度增长。</p>
 <h2><strong>美国消费者信心指数升至17个月来新高</strong></h2>
 <p>美国经济研究机构世界大型企业联合会（Conference Board）周二公布的数据亦显示，美国6月消费者信心指数升至109.7，为2022年1月以来的最高水平，消费者对劳动力市场的看法也有所改善。</p>
@@ -27,39 +27,36 @@
 <p>美国财经新闻频道CNBC报导，卡森集团（Carson Group）的首席市场策略师瑞安?德特里克（Ryan Detrick）说：“今年我们听到的都是即将到来的经济衰退，但事实是经济的基础很稳固，经济衰退的概率随着每一项经济数据的公布而降低。”</p>
 <p>责任编辑：李同德#</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/18/n13827386.md#1">盘点美国通胀率最高的十大城市</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/25/n13832272.md#1">经济学家：美国经济硬着陆的五个信号</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/2/n13941807.md#1">【财商天下】经济现状令人费解 美陷入“滚动式衰退”？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949469.md#1">2月份美国房市 拐点出现！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/18/n13827386.md#1">盘点美国通胀率最高的十大城市</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/25/n13832272.md#1">经济学家：美国经济硬着陆的五个信号</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/3/2/n13941807.md#1">【财商天下】经济现状令人费解 美陷入“滚动式衰退”？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/3/13/n13949469.md#1">2月份美国房市 拐点出现！</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/17/n9966250.md#1" target="_blank">文革中自杀的几个名人（5）翻译家傅雷</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/22/n10927324.md#1" target="_blank">跨国企业总经理修炼法轮功 受益无穷</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/27/n9996650.md#1" target="_blank">揭秘“四一二反革命政变”的历史真相（上）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/26/n11412078.md#1" target="_blank">胡平：未来道德重建 法轮功将发挥更大作用</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/24/n11971400.md#1">最新翻墙软件 突破封锁访问大纪元新唐人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/4/16/n12034796.md#1">【拍案惊奇】北京开打反习势力？美媒获瞒报铁证</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/4/17/n12038426.md#1">武汉为何突修订确诊及死亡人数 专家解读</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/4/16/n12034935.md#1">【翻墙必看】外媒曝中共秘密电话会议内容</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/4/16/n12037140.md#1">方方日记在海外出版引发的轩然大波</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/4/15/n12032770.md#1">疫情下加拿大小狗替家人带回速食餐点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/4/16/n12037498.md#1">洪都拉斯扮“陈时中弟弟” 影片爆红网络</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/4/15/n12033483.md#1">赞歌手韦礼安英文好 黄子佼提谭德塞全场笑翻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/4/16/n12037155.md#1">基努·里维斯分身惊现？两人外貌性格均相似</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/4/16/n12036959.md#1">李晨名誉权官司败诉 须承担千余元案件受理费</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/4/15/n12033701.md#1">没喝孟婆汤？ 这些古人记得前生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/25/n11972220.md#1">三和尚转生高官  身带跨世“印记”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/4/16/n12037055.md#1">替婢女隐瞒无心之过 天报善德赐贵子</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/4/8/n12014532.md#1">“学富五车” 竟是半瓶水叮当响？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/4/16/n12034842.md#1">诸葛空城  “五音八卦阵”空而不虚</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309049.md#1">目睹圣母玛利亚雕像眨眼睛 美俄州民众称奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304840.md#1">夏海珍——苦海泅渡的修炼故事（3）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309979.md#1">【秦鹏观察】乌军攻入俄罗斯 中俄朝各打小算盘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310090.md#1">【新闻欣视角】两大异常！中南海必有事？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309820.md#1">【晚间新闻】中国专家承认疫情上升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308743.md#1">用特斯拉皮卡种地走红 美农场主：真的很快</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308673.md#1">【更新】2024年巴黎奥运奖牌榜 8月10日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308823.md#1">17岁美华裔女生开副业 月进7.1万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308866.md#1">刻画外卖骑手生活 徐峥《逆行人生》评论两极</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309576.md#1">阿汤哥空降奥运闭幕式 传递会旗影片线上看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308912.md#1">罗时丰切割下架YT影片 “侄子”获店家力挺打气</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309904.md#1">香港导演元奎惊传两年前过世 田启文透露死因</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309654.md#1">如何从指甲看出身体是否健康？ 专家这么说</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307008.md#1">12年深陷重度抑郁泥潭 痊愈始于一本书</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309084.md#1">夏天厨房太热 教你不流汗的烹饪方式</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/6/28/n14024148.htm">美国经济数据利好 科技股领涨 美股反弹</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/6/28/n14024148.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/6/28/n14024148.htm">美国经济数据利好 科技股领涨 美股反弹</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/6/28/n14024148.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
